--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,22 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="sort_todos">Sort by</string>
+
+
+
+    <!--Strings for settings-->
+    <string-array name="pref_sort_todos_list_titles">
+        <item>Created on</item>
+        <item>Deadline</item>
+        <item>Name</item>
+    </string-array>
+
+    <string-array name="pref_sort_todos_list_values">
+        <item>created_at</item>
+        <item>deadline</item>
+        <item>name</item>
+
+    </string-array>
 </resources>
